2012-05-31  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Hide wmic error messages and improved
	  error checking.

2012-05-30  Sancho Lerena <slerena@artica.es>
	
	* lib/PandoraFMS/Core.pm: Fixed description/comment for a function.

	* lib/PandoraFMS/Core.pm: Updated batch statistic queries to get
	information about groups. SQL code taken from new functions in
	functions_group.php. Unified criteria to calculate information.

2012-05-29  Sancho Lerena <slerena@artica.es>

	* util/pandora_manage.pl,
	pandora_server_upgrade,
	DEBIAN/control,
	README,
	pandora_server.spec,
	lib/PandoraFMS/Config.pm,
	pandora_server.redhat.spec: Updated version string to 4.0.2

2012-05-29  Koichiro Kikuchi <koichiro@rworks.jp>

	* util/pandora_db.pl: Merged from trunk: Don't delete non-initialized
	 modules which belong to disabled agent.

2012-05-21  Koichiro Kikuchi  <koichiro@rworks.jp>

	* util/pandora_db.pl: Set default DB port number when it's not
	 specified in the configuration file.

2012-05-17  Koichiro Kikuchi  <koichiro@rworks.jp>

	* conf/pandora_server.conf.windows,
	  conf/pandora_server.conf,
	  lib/PandoraFMS/DB.pm
	  lib/PandoraFMS/Core.pm
	  lib/PandoraFMS/SNMPServer.pm
	  lib/PandoraFMS/Config.pm
	  lib/PandoraFMS/ProducerConsumerServer.pm
	  bin/pandora_server
	  FreeBSD/pandora_server.conf
	  util/pandora_db.pl
	  util/recon_scripts/snmpdevices.pl
	  util/recon_scripts/ipmi-recon.pl
	  util/plugin/pandora_inventory_change.pl
	  util/plugin/pandora_server_status.pl
	  util/pandora_manage.pl
	  util/pandora_recode_db.pl
	  util/pandora_dbstress.pl: Merged from trunk. Now pandora_server
	 supports DB server running on non-standard port.

2012-05-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/pandora_xml_stress.conf: Fixed a wrong default configuration file
	for pandora_xmk_stress
	
2012-05-10  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Synchronized with the generic
	configuration file, conf/pandora_server.conf.
