@@ -1,3 +1,8 @@
+2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Fixed an error counting 
+	unknown agents in groups.
+
 2012-05-31  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/WMIServer.pm: Hide wmic error messages and improved
